--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -5,12 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChessUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="600"
-        Icon="ChessPieces/icon.ico">
-    <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="ChessPieces/Board.png"></ImageBrush>
-        </Grid.Background>
+        Title="Chess"  Width="600" SizeToContent="Height"
+        Icon="ChessPieces/icon.ico"
+        WindowStartupLocation="CenterScreen"
+        Background="LightGray">
 
-    </Grid>
+
+    <Viewbox>
+        <Grid x:Name="BoardGrid" Width="600" Height="600">
+            <Grid.Background>   
+                <ImageBrush ImageSource="ChessPieces/Board.png"></ImageBrush>
+            </Grid.Background>
+
+            <UniformGrid x:Name="PieceGrid" Rows="8" Columns="8">
+
+
+            </UniformGrid>
+
+        </Grid>
+
+        
+        
+    </Viewbox>
+
+    
 </Window>
