--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -17,7 +17,7 @@
                 <ImageBrush ImageSource="ChessPieces/Board.png"></ImageBrush>
             </Grid.Background>
 
-            <UniformGrid x:Name="PieceGrid" Rows="8" Columns="8">
+            <UniformGrid x:Name="PieceGrid" Rows="8" Columns="8" RenderOptions.BitmapScalingMode="HighQuality">
 
 
             </UniformGrid>
