--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="Chess"  Width="600" SizeToContent="Height"
         Icon="ChessPieces/icon.ico"
         WindowStartupLocation="CenterScreen"
-        Background="LightGray">
+        Background="LightGray"
+        KeyDown="Window_KeyDown">
 
 
     <Viewbox>
